chore: fixed layout on smaller screens

--- a/src/main/webapp/resources/js/components/Header/MainNavigation/MainNavigation.css
+++ b/src/main/webapp/resources/js/components/Header/MainNavigation/MainNavigation.css
@@ -1,55 +1,104 @@
+/*.main-navigation {*/
+/*  display: flex;*/
+/*  align-content: center;*/
+/*  height: 64px;*/
+/*}*/
+
+/*.dark-theme.main-navigation {*/
+/*  background-color: #001529;*/
+/*}*/
+
+/*.light-theme.main-navigation {*/
+/*  background-color: #ffffff;*/
+/*}*/
+
+/*.main-navigation header {*/
+/*  position: fixed;*/
+/*  z-index: 1000;*/
+/*  display: flex;*/
+/*  width: 100%;*/
+/*}*/
+
+/*.main-navigation .ant-menu-item-active {*/
+/*  background-color: transparent;*/
+/*}*/
+
+/*.main-navigation .anticon {*/
+/*  font-size: 20px !important;*/
+/*}*/
+
+/*.dark-theme .main-navigation .anticon,*/
+/*.dark-theme .main-navigation .ant-menu-title-content a {*/
+/*  color: var(--grey-2);*/
+/*}*/
+
+/*.light-theme .main-navigation .anticon,*/
+/*.light-theme .main-navigation .ant-menu-title-content a {*/
+/*  color: var(--grey-11);*/
+/*}*/
+
+/*.main-navigation .ant-menu-title-content a {*/
+/*  font-weight: 600;*/
+/*  font-size: 1.5rem;*/
+/*}*/
+
+/*.dark-theme .main-navigation .ant-menu-title-content a:hover {*/
+/*  color: var(--grey-1);*/
+/*}*/
+
+/*.light-theme .main-navigation .ant-menu-title-content a:hover {*/
+/*  color: var(--grey-8);*/
+/*}*/
+
+/*.main-navigation .accessory-menu {*/
+/*  margin-left: 30px;*/
+/*}*/
+
 .main-navigation {
   display: flex;
-  align-content: center;
-  height: 64px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: orange;
 }
 
-.dark-theme.main-navigation {
-  background-color: #001529;
-}
-
-.light-theme.main-navigation {
-  background-color: #ffffff;
-}
-
-.main-navigation header {
-  position: fixed;
-  z-index: 1000;
-  display: flex;
-  width: 100%;
-}
-
-.main-navigation .ant-menu-item-active {
-  background-color: transparent;
-}
-
-.main-navigation .anticon {
-  font-size: 20px !important;
-}
-
-.dark-theme .main-navigation .anticon,
-.dark-theme .main-navigation .ant-menu-title-content a {
-  color: var(--grey-2);
-}
-
-.light-theme .main-navigation .anticon,
-.light-theme .main-navigation .ant-menu-title-content a {
-  color: var(--grey-11);
-}
-
-.main-navigation .ant-menu-title-content a {
-  font-weight: 600;
+.main-navigation .ant-menu {
   font-size: 1.5rem;
+  font-weight: bold;
+  min-width: 0;
+  flex: auto;
 }
 
-.dark-theme .main-navigation .ant-menu-title-content a:hover {
+.main-navigation .ant-menu-submenu a {
+  color: var(--grey-6);
+}
+
+.main-navigation .ant-menu-submenu-title svg {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.main-navigation .ant-menu-title-content svg {
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--grey-6);
+  margin-bottom: -2px;
+}
+
+.main-navigation .ant-menu-title-content:hover svg {
   color: var(--grey-1);
 }
 
-.light-theme .main-navigation .ant-menu-title-content a:hover {
-  color: var(--grey-8);
+.ant-menu-submenu-popup a {
+  color: var(--grey-6);
 }
 
-.main-navigation .accessory-menu {
-  margin-left: 30px;
+.main-navigation .ant-btn-ghost {
+  border-color: var(--grey-6);
+  color: var(--grey-6);
+}
+
+.main-navigation .ant-btn-ghost:hover {
+  border-color: var(--grey-1);
+  color: var(--grey-1);
 }
